--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_storage: ^2.1.1
   hydrated_bloc: ^9.1.2
   path_provider: ^2.1.1
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
