--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   hydrated_bloc: ^9.1.2
   path_provider: ^2.1.1
   font_awesome_flutter: ^10.6.0
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
